<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_card"
    android:layout_marginBottom="10dp"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/article_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/article_name"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/article_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:lines="5"
        android:text="@string/text"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/article_name"
        app:layout_constraintTop_toBottomOf="@id/article_name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, article_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category_underline"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent "
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageView
        android:id="@+id/ic_eye"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/eye_value_label"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@id/categories"
        app:layout_constraintEnd_toStartOf="@id/eye_value"
        app:layout_constraintTop_toTopOf="@id/categories" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/eye_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/eye_value"
        android:textColor="@color/secondary_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_eye"
        app:layout_constraintEnd_toStartOf="@id/icon_space"
        app:layout_constraintTop_toTopOf="@id/ic_eye" />

    <Space
        android:id="@+id/icon_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/eye_value"
        app:layout_constraintEnd_toStartOf="@id/read"
        app:layout_constraintStart_toEndOf="@id/categories"
        app:layout_constraintTop_toTopOf="@id/eye_value" />

    <ImageView
        android:id="@+id/ic_like"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@id/ic_eye"
        app:layout_constraintStart_toEndOf="@id/icon_space"
        app:layout_constraintTop_toTopOf="@id/ic_eye"
        android:contentDescription="@string/like_value_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/like_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/like_value"
        android:textColor="@color/secondary_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_like"
        app:layout_constraintStart_toEndOf="@id/ic_like"
        app:layout_constraintTop_toTopOf="@id/ic_like" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/read"
        android:textColor="@color/orange_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/categories"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>