<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@id/ic_eye"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_chips" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollableConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                android:textColor="@color/orange_dark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/login"
                android:lines="1"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:textColor="@color/orange_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/author_label"
                app:layout_constraintEnd_toStartOf="@id/ic_eye"
                app:layout_constraintStart_toEndOf="@id/author_label"
                app:layout_constraintTop_toTopOf="@id/author_label" />

            <ImageView
                android:id="@+id/ic_eye"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/eye_value_label"
                android:src="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@id/eye_value"
                app:layout_constraintEnd_toStartOf="@id/eye_value"
                app:layout_constraintTop_toTopOf="@id/eye_value"
                app:tint="@color/secondary_black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/eye_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:text="@string/eye_value"
                android:textColor="@color/secondary_black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ic_like"
                app:layout_constraintEnd_toStartOf="@id/ic_like"
                app:layout_constraintTop_toTopOf="@id/ic_like" />

            <ImageView
                android:id="@+id/ic_like"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/like_value_label"
                android:src="@drawable/ic_like"
                app:layout_constraintBottom_toBottomOf="@id/like_value"
                app:layout_constraintEnd_toStartOf="@id/like_value"
                app:layout_constraintTop_toTopOf="@id/like_value"
                app:tint="@color/secondary_black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/like_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:text="@string/like_value"
                android:textColor="@color/secondary_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_name"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="top_toolbar_layout, scrollView" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>